// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.jsonc - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["jsonc"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
  ["omit-if-short"],
  ["long","long","long","long","long","long","enough","to","break","into","multiple","lines"],
  {"short":"object"},
  {"long":"","enough":"","to":"","break":"","into":"","multiple":"","lines":""}
]

=====================================output=====================================
[
  ["omit-if-short"],
  [
    "long",
    "long",
    "long",
    "long",
    "long",
    "long",
    "enough",
    "to",
    "break",
    "into",
    "multiple",
    "lines",
  ],
  { "short": "object" },
  {
    "long": "",
    "enough": "",
    "to": "",
    "break": "",
    "into": "",
    "multiple": "",
    "lines": "",
  },
]

================================================================================
`;

exports[`test.jsonc - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["jsonc"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
[
  ["omit-if-short"],
  ["long","long","long","long","long","long","enough","to","break","into","multiple","lines"],
  {"short":"object"},
  {"long":"","enough":"","to":"","break":"","into":"","multiple":"","lines":""}
]

=====================================output=====================================
[
  ["omit-if-short"],
  [
    "long",
    "long",
    "long",
    "long",
    "long",
    "long",
    "enough",
    "to",
    "break",
    "into",
    "multiple",
    "lines",
  ],
  { "short": "object" },
  {
    "long": "",
    "enough": "",
    "to": "",
    "break": "",
    "into": "",
    "multiple": "",
    "lines": "",
  },
]

================================================================================
`;

exports[`test.jsonc - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["jsonc"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
[
  ["omit-if-short"],
  ["long","long","long","long","long","long","enough","to","break","into","multiple","lines"],
  {"short":"object"},
  {"long":"","enough":"","to":"","break":"","into":"","multiple":"","lines":""}
]

=====================================output=====================================
[
  ["omit-if-short"],
  [
    "long",
    "long",
    "long",
    "long",
    "long",
    "long",
    "enough",
    "to",
    "break",
    "into",
    "multiple",
    "lines"
  ],
  { "short": "object" },
  {
    "long": "",
    "enough": "",
    "to": "",
    "break": "",
    "into": "",
    "multiple": "",
    "lines": ""
  }
]

================================================================================
`;
